# Ligh-tech-RND

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/api/: filters.py  serializers.py  urls.py  views.py
app/app/: settings.py
app/balances/: admin.py  models.py
app/balances/migrations/: 0001_initial.py  0002_initial.py  0003_alter_balance_balance_amount.py
app/operations/: admin.py  models.py
app/operations/migrations/: 0001_initial.py  0002_alter_operation_amount.py
app/users/: admin.py  models.py
app/users/migrations/: 0001_initial.py
postman/: Ligh-tech RND.postman_collection.json
